# cdse-client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_REPO_SETUP.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_v0.4.0.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: faq.md  getting-started.md  index.md  migration.md  release.md  releases.md
docs/reference/: async_client.md  auth.md  catalog.md  cli.md  client.md  converters.md  downloader.md  exceptions.md  geocoding.md  geometry.md  processing.md  product.md
docs/user-guide/: async.md  cli.md  download.md  export.md  processing.md  search.md
examples/: README.md  async_download.py  processing_preview.py  quickstart_search_download.py
notebooks/: test_cdse_client.ipynb
src/cdse/: __init__.py  async_client.py  auth.py  catalog.py  cli.py  client.py  converters.py  downloader.py  exceptions.py  geocoding.py  geometry.py  processing.py  product.py
tests/: __init__.py  test_async_client.py  test_auth.py  test_catalog.py  test_cli.py  test_client.py  test_converters.py  test_downloader.py  test_geocoding.py  test_geometry.py  test_processing.py  test_product.py
