[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdse-client"
version = "0.3.2"
description = "Python client for Copernicus Data Space Ecosystem (CDSE) - Drop-in replacement for sentinelsat"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Vito D'Elia", email = "75219756+VTvito@users.noreply.github.com"}
]
maintainers = [
    {name = "Vito D'Elia", email = "75219756+VTvito@users.noreply.github.com"}
]
keywords = [
    "copernicus",
    "sentinel",
    "satellite",
    "remote-sensing",
    "earth-observation",
    "CDSE",
    "STAC",
    "sentinelsat"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "oauthlib>=3.2.0",
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.22.0",
    "black>=23.0.0; python_version >= '3.10'",
    "ruff>=0.1.0; python_version >= '3.10'",
    "mypy>=1.0.0; python_version >= '3.10'",
    "build>=1.0.0",
    "twine>=4.0.0",
    "bandit>=1.7.0",
    "types-requests>=2.28.0",
    "types-tqdm>=4.64.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]
geo = [
    "shapely>=2.0.0",
    "geojson>=3.0.0",
    "geopy>=2.4.0",
    "geopandas>=0.14.0",
]
dataframe = [
    "pandas>=2.0.0",
]
async = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]
processing = [
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
]
all = [
    "shapely>=2.0.0",
    "geojson>=3.0.0",
    "geopy>=2.4.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/VTvito/cdse-client"
Documentation = "https://vtvito.github.io/cdse-client/"
Repository = "https://github.com/VTvito/cdse-client.git"
Issues = "https://github.com/VTvito/cdse-client/issues"
Changelog = "https://github.com/VTvito/cdse-client/blob/main/CHANGELOG.md"

[project.scripts]
cdse = "cdse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
cdse = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=cdse --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cdse"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
